# Bootiful

./: Cargo.toml  README.md  package-lock.json  package.json
crates/bootiful-plymouth-discovery/: Cargo.toml
crates/bootiful-plymouth-discovery-cli/: Cargo.toml
crates/bootiful-plymouth-discovery-cli/src/: main.rs
crates/bootiful-plymouth-discovery-tauri/: Cargo.toml
crates/bootiful-plymouth-discovery-tauri/src/: lib.rs
crates/bootiful-plymouth-discovery/src/: error.rs  lib.rs  model.rs
crates/bootiful-plymouth-discovery/src/detector/: bootloader.rs  config.rs  consistency.rs  environment.rs  graphics.rs  initramfs.rs  logo.rs  logs.rs  mod.rs  packages.rs  plugins.rs  runtime.rs  system.rs  themes.rs  utils.rs
docs/: crate-bootiful-plymouth-discovery-cli.md  crate-bootiful-plymouth-discovery-tauri.md  crate-bootiful-plymouth-discovery.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
