[workspace]
resolver = "2"

members = [
    "crates/bootiful-plymouth-discovery",
    "crates/bootiful-plymouth-discovery-cli",
    "crates/bootiful-plymouth-discovery-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
description = "Plymouth Discovery Layer for Linux"
repository = "https://github.com/kacperpaczos/Bootiful"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
walkdir = "2.5"
regex = "1.10"
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
tauri = "2.0"
thiserror = "1.0"
anyhow = "1.0"
